--- a/intro-js-1/js-funcs/js-funcs.html
+++ b/intro-js-1/js-funcs/js-funcs.html
@@ -19,6 +19,10 @@ function square(x) {
 function calculateDistance(x1, y1, x2, y2) {
     return Math.sqrt(square(x1 - x2) + square(y1 - y2));
 }
+
+sayHello();
+// document.write(square(4));
+// document.write(calculateDistance(1, 1, 4, 5))
     </script>
 </body>
 
