--- a/intro-js-1/js-loops/js-loops.html
+++ b/intro-js-1/js-loops/js-loops.html
@@ -14,7 +14,10 @@
     <script>
 var i = 10;
 
-
+// finish the condition
+while (!()) {
+    i++;
+}
 
 document.write("The answer is: ", i);
     </script>
