--- a/intro-js-1/js-strings/js-strings.html
+++ b/intro-js-1/js-strings/js-strings.html
@@ -9,8 +9,13 @@
     <h1>A Look at JavaScript Strings</h1>
 
     <script>
-var myName = "Matthew Feng"
-var myAge = "19"
+var myName = "Matthew Feng";
+
+document.write(myName.substring(, )); // ask students how to get my first name
+
+// document.write(myName.substring(, )); // ask students how to get my last name
+// document.write(myName.toUpperCase());
+// document.write(myName.toLowerCase());
     </script>
 </body>
 
