Finish demos js2

--- a/intro-js-2/events1/events1.html
+++ b/intro-js-2/events1/events1.html
@@ -10,7 +10,7 @@
     <button onclick="alertMe()">Surprise!</button>
     <button onclick="changeText(this)">Click me!</button>
 
-    <script src="events.js"></script>
+    <script src="events1.js"></script>
 </body>
 
 </html>
