--- a/intro-js-2/dom-select/dom-select.html
+++ b/intro-js-2/dom-select/dom-select.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h2 class="message">Y2</h2>
+    <h2 class="message">Y2, Who are you?</h2>
     <p class="message">There is nothing we can't do!</p>
     <p>Awoo, Awoo, Awoo Awoo Awoo!</p>
     <button id="myBtn">My Button</button>
