--- a/intro-js-1/js-strings/js-strings.html
+++ b/intro-js-1/js-strings/js-strings.html
@@ -11,11 +11,11 @@
     <script>
 var myName = "Matthew Feng";
 
-document.write(myName.substring(, )); // ask students how to get my first name
+// document.write(myName.substring(0, 7)); // ask students how to get my first name
 
-// document.write(myName.substring(, )); // ask students how to get my last name
+// document.write(myName.substring(8, 12)); // ask students how to get my last name
 // document.write(myName.toUpperCase());
-// document.write(myName.toLowerCase());
+document.write(myName.toLowerCase());
     </script>
 </body>
 
