--- a/intro-js-1/js-vars/js-vars.html
+++ b/intro-js-1/js-vars/js-vars.html
@@ -9,7 +9,7 @@
     <h1>A Look at JavaScript Variables</h1>
 
     <script>
-var greeting = ""; // Give me a greeting!
+var greeting = "assalam 3alaykum"; // Give me a greeting!
 var name = prompt("What is your name?");
 
 document.write(greeting + ", " + name);
