--- a/intro-js-1/js-numbers/js-numbers.html
+++ b/intro-js-1/js-numbers/js-numbers.html
@@ -9,12 +9,12 @@
     <h1>JavaScript Numbers</h1>
 
     <script>
-var bankBalance = 10;
-document.write("I have $" + bankBalance.toFixed(2) + " in my pocket");
+// var bankBalance = 10;
+// document.write("I have $" + bankBalance.toFixed(2) + " in my pocket");
 
 // Showcase NaN and Infinity
-document.write(Number(""));
-document.write("1 / 0 = ", 1 / 0);
+// document.write(Number("cat"));
+document.write("-1 / 0 = ", -1 / 0);
     </script>
 </body>
 
