Content and style labs

--- a/jquery-1/jquery-style/jquery-style.html
+++ b/jquery-1/jquery-style/jquery-style.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>JQuery Selectors</title>
+    <title>JQuery Edit Styles</title>
     <link rel="stylesheet" type="text/css" href="../demo.css">
 </head>
 
@@ -13,7 +13,7 @@
 
     <!-- PLEASE DO NOT ADD ANY JAVASCRIPT CODE HERE! :) -->
     <script src="jquery.js"></script>
-    <script src="jquery-select.js"></script>
+    <script src="jquery-style.js"></script>
 </body>
 
 </html>
