--- a/jquery-1/jquery-events1/jquery-events1.html
+++ b/jquery-1/jquery-events1/jquery-events1.html
@@ -1,15 +1,16 @@
 <html>
 
 <head>
-    <title>JQuery Template</title>
+    <title>JQuery Events 1</title>
     <link rel="stylesheet" type="text/css" href="../demo.css">
 </head>
 
 <body>
+    <button id="myBtn">This is my button</button>
 
     <!-- PLEASE DO NOT ADD ANY JAVASCRIPT CODE HERE! :) -->
     <script src="jquery.js"></script>
-    <script src="template.js"></script>
+    <script src="jquery-events1.js"></script>
 </body>
 
 </html>
